--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@
     justify-content: center;
     align-items: center;
     height: 100%;
-    background: url(../img/minBG.png) center;
+    background: url(../img/Bg.png) center;
 	background-size: cover;
     flex-direction: column;
     color: #fff;
